GERONIMO-1833 Non-public Sun classes dependencies in tests
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@470000 13f79535-47bb-0310-9956-ffa450edef68